--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.show-sql = true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
+jwt.secret=secret
+#spring.jpa.properties.hibernate.hbm2ddl.auto: update
