--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3355/ecommerce
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=abcd1234
 spring.jpa.show-sql = true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
