--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3355/ecommerce
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=abcd1234
 spring.jpa.show-sql = true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 jwt.secret=secret
-#spring.jpa.properties.hibernate.hbm2ddl.auto: update
+#spring.jpa.hibernate.ddl-auto= update
